Actions logic added

--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -5,11 +5,11 @@ ion-content {
     --background: linear-gradient(to bottom, #eef9f8 0%,#eff8f4 40%,#f0f6f0 100%);
     text-align: center;
     h1 {
-        margin: 35% auto 20%;
+        margin: 10vh auto;
         color: #4f8db3;
     }
     h4 {
-        margin: 0 auto 40%;
+        margin: 10vh auto;
         color: #444;
     }
 }
