--- a/src/app/pages/appointment/appointment.page.scss
+++ b/src/app/pages/appointment/appointment.page.scss
@@ -34,7 +34,6 @@
                 margin: 1vh auto;
                 width: 56px;
                 height: 56px;
-                background-image: url('https://i.pinimg.com/originals/d6/03/73/d603733992e093672022aa210f81732b.jpg');
                 background-repeat: no-repeat;
                 background-position: center;
                 background-size: cover;
@@ -82,6 +81,10 @@
        margin: 1vh;
        ion-icon {
            margin-right: 10px;
+       }
+       ion-button {
+         transition: all 3s;
+         -webkit-transition: all 3s;
        }
     }
     &__tabs {
